2009-05-02  Dave Morrison  <drm@finkproject.org>

	* bootstrap: seek confirmation from user about the choice of
	10.5/x86_64

2009-05-01  Dave Morrison  <drm@finkproject.org>

	* bootstrap: give users a choice of architecture, if they are on
	64bit-capable intel hardware with distribution >= 10.5
	* bootstrap-phase2.pl: print Architecture as well as Distribution

2009-04-17  Dave Morrison  <drm@finkproject.org>

	* boostrap: add comment

2009-04-06  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST: add .pt README
	* readme.*.html: regenerate

2009-04-06  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST: add new XTerm notifier

2009-04-05  Dave Morrison  <drm@finkproject.org>

	* VERSION: Make fink HEAD always >> 0.29.x, since that has now
	branched.

2009-04-05  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore: compiler_wrapper is now a generated file

2009-04-05  Dave Morrison  <drm@finkproject.org>

	* compiler_wrapper, compiler_wrapper.in, setup.sh, MANIFEST: use 
	architecture-dependent path-prefix on <redacted>
	* bootstrap: provide a new option for adventurous developers

2009-03-31  Dave Morrison  <drm@finkproject.org>

	* setup.sh: FinkVersion.pm.in no longer needs @BASEPATH@ substitution,
	and fink.8.in no longer needs @VERSION@ substitution.
	* inject.pl: create FinkVersion.pm out of FinkVersion.pm.in before
	loading Fink::Bootstrap.  Because this copy of fink is only present
	in order to run Fink::Bootstrap::inject_packages(), we don't care
	about the values of @VERSION@ or @ARCHITECTURE@ -- the actual values
	are not needed -- so we leave those strings as is.

2009-03-30  Daniel Macks  <dmacks@netspace.org>

	* MANIFEST: sync with refactored [boostrap bootstrap-phase2.pl]

2009-03-21  Dave Morrison  <drm@finkproject.org>

	* fink.csh, fink.sh: make sure $osMajorVer(sion) has been defined
	* Makefile, fink.info.in, setup.sh: guarantee that fink itself is 
	running under the correct version of perl (because when 